--- a/app/src/main/res/layout/meet_item.xml
+++ b/app/src/main/res/layout/meet_item.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/circle_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:background="@drawable/ic_circle"
         android:layout_margin="@dimen/text_margin"
         app:layout_constraintBottom_toBottomOf="parent"
