--- a/app/src/main/res/drawable-v24/ic_circle4.xml
+++ b/app/src/main/res/drawable-v24/ic_circle4.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#24EA45"/>
+        android:color="#42F5E6"/>
     <size
         android:width="@dimen/circle_size"
         android:height="@dimen/circle_size"/>
