--- a/app/src/main/res/drawable/ic_circle2.xml
+++ b/app/src/main/res/drawable/ic_circle2.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#24EA45"/>
+        android:color="#F59B42"/>
     <size
         android:width="@dimen/circle_size"
         android:height="@dimen/circle_size"/>
