--- a/app/src/main/res/drawable/ic_circle3.xml
+++ b/app/src/main/res/drawable/ic_circle3.xml
@@ -1,6 +1,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:shape="oval"
+    tools:keep="@drawable/ic_circle3">
     <solid
         android:color="#BF4349"/>
     <size
