--- a/app/src/main/res/layout/activity_list_meet_landscape.xml
+++ b/app/src/main/res/layout/activity_list_meet_landscape.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:keep="@layout/activity_list_meet_landscape">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meet_list"
@@ -16,15 +17,15 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/meet_add"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:src="@drawable/ic_add_white"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_add_white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
