--- a/app/src/main/res/layout/meet_item.xml
+++ b/app/src/main/res/layout/meet_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/circle_item"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/ic_circle"
         android:layout_margin="@dimen/text_margin"
+        android:background="@drawable/ic_circle"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,42 +20,43 @@
         android:id="@+id/description_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:textAlignment="textStart"
         android:layout_marginStart="@dimen/text_margin"
         android:layout_marginTop="@dimen/text_margin"
         android:layout_marginEnd="@dimen/text_margin"
-        android:textStyle="bold"
-        android:textColor="@color/colorTextDescription"
-        android:singleLine="true"
         android:ellipsize="end"
+        android:singleLine="true"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorTextDescription"
+        android:textStyle="bold"
         app:layout_constrainedWidth="true"
-        app:layout_constraintStart_toEndOf="@+id/circle_item"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/participants_item"
         app:layout_constraintEnd_toStartOf="@+id/delete_item"
-        app:layout_constraintBottom_toTopOf="@id/participants_item" />
+        app:layout_constraintStart_toEndOf="@+id/circle_item"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/participants_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginBottom="@dimen/text_margin"
         android:layout_marginEnd="@dimen/text_margin"
-        android:textColor="@color/colorTextParticipants"
-        android:singleLine="true"
+        android:layout_marginBottom="@dimen/text_margin"
         android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="@color/colorTextParticipants"
         app:layout_constrainedWidth="true"
-        app:layout_constraintStart_toEndOf="@+id/circle_item"
-        app:layout_constraintTop_toBottomOf="@id/description_item"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/delete_item"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/circle_item"
+        app:layout_constraintTop_toBottomOf="@id/description_item" />
 
     <ImageButton
         android:id="@+id/delete_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_delete_black_24dp"
         android:layout_margin="@dimen/text_margin"
+        android:background="@drawable/ic_delete_black_24dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
