--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorCircle">#A8A8A8</color>
+    <color name="colorCircle" tools:keep="@color/colorCircle">#A8A8A8</color>
     <color name="colorTextDescription">#000000</color>
     <color name="colorTextParticipants">#000000</color>
-    <color name="colorTextToast">#555555</color>
-    <color name="colorTextButton">#FFFFFF</color>
+    <color name="colorTextToast" tools:keep="@color/colorTextToast">#555555</color>
+    <color name="colorTextButton" tools:keep="@color/colorTextButton">#FFFFFF</color>
 </resources>
