--- a/app/src/main/res/layout-hdpi/activity_list_meet.xml
+++ b/app/src/main/res/layout-hdpi/activity_list_meet.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:keep="@layout/activity_list_meet_landscape">
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meet_list"
@@ -24,6 +23,8 @@
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add_white"
+
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
