--- a/app/src/main/res/layout-anyDpi/meet_item.xml
+++ b/app/src/main/res/layout-anyDpi/meet_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,8 +11,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="@dimen/text_margin"
-        android:background="@drawable/ic_circle"
-        android:contentDescription="TODO"
+        android:background="@drawable/ic_circle2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -56,7 +56,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:background="@drawable/ic_delete_black_24dp"
-        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
