--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_margin_mdpi">4dp</dimen>
+    <dimen name="text_margin_hdpi">6dp</dimen>
+    <dimen name="text_margin_xhdpi">8dp</dimen>
+    <dimen name="text_margin_xxhdpi">12dp</dimen>
+    <dimen name="text_margin_xxxhdpi">14dp</dimen>
+    <dimen name="text_margin_large">16dp</dimen>
     <dimen name="circle_size">48dp</dimen>
+    <dimen name="circle_size_small">28dp</dimen>
+    <dimen name="circle_size_medium">38dp</dimen>
+    <dimen name="circle_size_large">48dp</dimen>
+    <dimen name="circle_size_xLarge">48dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="text_input_layout_margin">16dp</dimen>
+    <dimen name="fab_margin_small">16dp</dimen>
+    <dimen name="fab_margin_medium">16dp</dimen>
+    <dimen name="fab_margin_large">16dp</dimen>
+    <dimen name="fab_margin_xLarge">16dp</dimen>
+    <dimen name="text_input_layout_margin">4dp</dimen>
+    <dimen name="text_input_layout_margin_small">0.5dp</dimen>
     <dimen name="button_margin" tools:keep="@dimen/button_margin">16dp</dimen>
     <dimen name="spinner_item_margin" tools:keep="@dimen/spinner_item_margin">8dp</dimen>
     <dimen name="text_view_spinner_size">18sp</dimen>
+    <dimen name="text_view_spinner_size_small">18sp</dimen>
+    <dimen name="text_view_spinner_size_medium">18sp</dimen>
+    <dimen name="text_view_spinner_size_large">18sp</dimen>
+    <dimen name="text_view_spinner_size_xLarge">18sp</dimen>
     <dimen name="text_view_spinner_item_size" tools:keep="@dimen/text_view_spinner_item_size">16sp
     </dimen>
     <dimen name="chip_group_top_margin">8dp</dimen>
