--- a/app/src/main/res/drawable-v24/ic_circle4.xml
+++ b/app/src/main/res/drawable-v24/ic_circle4.xml
@@ -6,6 +6,6 @@
     <solid
         android:color="#42F5E6"/>
     <size
-        android:width="@dimen/circle_size"
-        android:height="@dimen/circle_size"/>
+        android:width="@dimen/circle_size_anyDpi"
+        android:height="@dimen/circle_size_anyDpi" />
 </shape>
