--- a/app/src/main/res/layout-anyDpi/meet_item.xml
+++ b/app/src/main/res/layout-anyDpi/meet_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,13 +7,12 @@
     tools:context=".ui.fragment.meet_list.ListMeetActivity"
     android:orientation="horizontal">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:src="@drawable/photoprofil"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circle_item"
-        app:layout_constraintCircleRadius="@dimen/circle_size"
+        android:layout_margin="@dimen/text_margin_anyDpi"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="@dimen/text_margin"
+        app:layout_constraintCircleRadius="@dimen/circle_size_anyDpi"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,9 +21,9 @@
         android:id="@+id/description_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginTop="@dimen/text_margin"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin_anyDpi"
+        android:layout_marginTop="@dimen/text_margin_anyDpi"
+        android:layout_marginEnd="@dimen/text_margin_anyDpi"
         android:ellipsize="end"
         android:singleLine="true"
         android:textAlignment="textStart"
@@ -41,9 +39,9 @@
         android:id="@+id/participants_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginEnd="@dimen/text_margin"
-        android:layout_marginBottom="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin_anyDpi"
+        android:layout_marginEnd="@dimen/text_margin_anyDpi"
+        android:layout_marginBottom="@dimen/text_margin_anyDpi"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/colorTextParticipants"
@@ -57,10 +55,11 @@
         android:id="@+id/delete_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/text_margin_anyDpi"
         android:background="@drawable/ic_delete_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
