--- a/app/src/main/res/drawable/ic_circle.xml
+++ b/app/src/main/res/drawable/ic_circle.xml
@@ -2,6 +2,6 @@
     android:shape="oval">
     <solid android:color="#24EA45" />
     <size
-        android:width="@dimen/circle_size"
-        android:height="@dimen/circle_size" />
+        android:width="@dimen/circle_size_anyDpi"
+        android:height="@dimen/circle_size_anyDpi" />
 </shape>
