--- a/app/src/main/res/drawable/ic_circle3.xml
+++ b/app/src/main/res/drawable/ic_circle3.xml
@@ -6,6 +6,6 @@
     <solid
         android:color="#BF4349"/>
     <size
-        android:width="@dimen/circle_size"
-        android:height="@dimen/circle_size"/>
+        android:width="@dimen/circle_size_anyDpi"
+        android:height="@dimen/circle_size_anyDpi" />
 </shape>
