--- a/app/src/main/res/drawable/ic_circle4.xml
+++ b/app/src/main/res/drawable/ic_circle4.xml
@@ -4,6 +4,6 @@
     tools:keep="@drawable/ic_circle4">
     <solid android:color="#42F5E6" />
     <size
-        android:width="@dimen/circle_size"
-        android:height="@dimen/circle_size" />
+        android:width="@dimen/circle_size_anyDpi"
+        android:height="@dimen/circle_size_anyDpi" />
 </shape>
