--- a/app/src/main/res/layout-hdpi/activity_add_meet.xml
+++ b/app/src/main/res/layout-hdpi/activity_add_meet.xml
@@ -21,8 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:cursorVisible="false"
-
-            android:hint="meet_room_name"
+            android:hint="@string/room_name"
             android:inputType="text"
             android:textSize="@dimen/text_view_spinner_size" />
 
