--- a/app/src/main/res/layout-large/meet_item.xml
+++ b/app/src/main/res/layout-large/meet_item.xml
@@ -8,13 +8,13 @@
     tools:context=".ui.fragment.meet_list.ListMeetActivity"
     android:orientation="horizontal">
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:id="@+id/circle_item"
         android:layout_height="50dp"
         android:src="@drawable/photoprofil"
-        app:layout_constraintCircleRadius="@dimen/circle_size"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/text_margin_large"
+        app:layout_constraintCircleRadius="@dimen/circle_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,9 +23,9 @@
         android:id="@+id/description_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginTop="@dimen/text_margin"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin_large"
+        android:layout_marginTop="@dimen/text_margin_large"
+        android:layout_marginEnd="@dimen/text_margin_large"
         android:ellipsize="end"
         android:singleLine="true"
         android:textAlignment="textStart"
@@ -41,9 +41,9 @@
         android:id="@+id/participants_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/text_margin"
-        android:layout_marginEnd="@dimen/text_margin"
-        android:layout_marginBottom="@dimen/text_margin"
+        android:layout_marginStart="@dimen/text_margin_large"
+        android:layout_marginEnd="@dimen/text_margin_large"
+        android:layout_marginBottom="@dimen/text_margin_large"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/colorTextParticipants"
@@ -57,10 +57,11 @@
         android:id="@+id/delete_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/text_margin_large"
         android:background="@drawable/ic_delete_black_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
