--- a/app/src/main/res/layout-xxhdpi/activity_list_meet.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_list_meet.xml
@@ -19,14 +19,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_margin="@dimen/fab_margin_xxhdpi"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/ic_add_white"
-
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
