--- a/app/src/main/res/layout-land/activity_add_meet.xml
+++ b/app/src/main/res/layout-land/activity_add_meet.xml
@@ -161,7 +161,9 @@
 
                 android:id="@+id/emails_group"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
 
